--- a/src/components/Quiz/components/Question/Question.css
+++ b/src/components/Quiz/components/Question/Question.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  border: 5px solid grey;
   padding: 20px;
   margin-top: 10px;
 }
@@ -32,6 +31,7 @@
   height: 50px;
   padding: 15px 20px;
   margin: 10px;
+  border-radius:10px;
   box-shadow: 0 0 2px black;
 }
 
